@@ -14,6 +14,10 @@ AC_PROG_CC
 AC_PROG_CXX
 AM_PROG_LIBTOOL
 
+dnl======================
+dnl checks for other programs 
+dnl======================
+AC_PATH_PROG(GKSUPROG, gksu)
 
 dnl======================
 dnl i18n stuff 
