@@ -1,7 +1,7 @@
 [Desktop Entry]
 _Name=GParted Partition Editor
 _Comment=Create, reorganize, and delete partitions
-Exec=@installdir@/gparted
+Exec=@gksuprog@ @installdir@/gparted
 Icon=gparted
 Terminal=false
 Type=Application
